<resources>
    <string name="app_name">NDemo</string>

    <string name="share_meizi_detial_activity">share_meizi_detial_activity</string>
    <string name="share_big_image_activity">share_big_image_activity</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="csy">财神爷</string>
    <string name="shareSucceed">保存成功</string>
    <string name="shareFaild">保存失败,请重试</string>
    <string name="meizi" translatable="false">妹子</string>
    <string name="theme">Theme</string>
    <string name="imagePush">图片推送</string>
    <string name="night">夜间模式</string>
    <string name="setting">设置</string>

    <string name="news">"&lt;p&gt;&lt;!--VIDEO#0--&gt;&lt;/p&gt;&lt;p&gt;　　中新网4月11日电 据外媒报道，在
一架美国联合航空公司航班上，一名华裔乘客遭强行拖拽的视频，引发社交网络广泛关注。当
地时间10日下午，芝加哥航空局发表声明称，涉此事件的一名警务人员已经被停职，等待调查
。&lt;/p&gt;&lt;p&gt;　　航空局发言人凯伦·普莱德称，发生在美联航3411航班上的时间不
符合标准作业程序，该警务人员的行动不应被容忍。&lt;/p&gt;&lt;p&gt;　　另一方面，美国
交通部确认，它正在研究这一事件，以确定“航空公司是否遵守经营规则”。
&lt;/p&gt;&lt;!--IMG#0--&gt;&lt;p&gt;　　美国联合航空公司3411号航班原定于9日晚从芝
加哥奥黑尔国际机场飞往肯塔基州路易斯维尔。因航空公司4名机组人员需要乘机，飞机超员，
在没有乘客志愿主动下机的情况下，机场安保强行将一名乘客从座椅上拉下并在过道上拖拽。
&lt;/p&gt;&lt;p&gt;　　名为奥德拉·布里奇斯的乘客在脸书上发布31秒视频显示，3名芝加
哥航空安全部门警员，强行将一名中年男子从座位上拽下，并反拉着他的双手在机舱过道拖行
，他的眼镜掉落卡在鼻子下方，嘴巴受伤流血。&lt;/p&gt;&lt;p&gt;　　美联航首席执行官穆
诺斯10日发表声明，称这是一起“令人沮丧的”事件，并为不得不重新安排乘客乘机致歉。他
表示，该公司的团队正在与相关部门合作，针对此事件进行调查。与此同时，航空公司也与这
名乘客联系，进一步解决该问题。&lt;/p&gt;&lt;p&gt;&lt;/p&gt;&lt;!--SPINFO#0--
&gt;&lt;/p&gt;&lt;p&gt;原标题：美联航华裔乘客遭强行拖拽下机 一涉事警员被停职
&lt;/p&gt;"</string>

    <string name="share_dialog_title">分享</string>
    <string name="save_long_image">保存整个页面</string>
    <string name="networkUnuseable">"网络不好,请检查网络"</string>
    <string name="map">地图</string>
    <string name="cg">查岗</string>
    <string name="location_error">定位失败</string>



    <!--下面是look的-->


    <string name="one_text">Be kind one another</string>


    <string name="pre_refresh_data" translatable="false">refresh_data</string>
    <string name="pre_get_image" translatable="false">get_image</string>
    <string name="pre_cache_size" translatable="false">cache_size</string>
    <string name="pre_feedback" translatable="false">feedback</string>
    <string name="pre_author" translatable="false">author</string>
    <string name="pre_version" translatable="false">version</string>
    <string name="pre_nav_color" translatable="false">pre_nav_color</string>
    <string name="pre_use_local" translatable="false">pre_use_local</string>
    <string name="pre_status_bar" translatable="false">pre_status_bar</string>


    <string name="snack_infor">请检查网络</string>

    <string name="transition_shot_background" translatable="false">shot_background</string>
    <string name="transition_shot" translatable="false">shot</string>

    <string name="nevigation_item" translatable="false">nevigation_item</string>

    <string name="zhihu" translatable="false">知乎日报</string>
    <string name="topnews" translatable="false">网易头条</string>


    <string name="filter" translatable="false">打开</string>
    <string name="about" translatable="false">关于</string>


    <string name="transition_topnew" translatable="false">topnewsimage</string>
    <string name="transition_topnew_linear" translatable="false">topnewlinear</string>

    <string name="meizitips" translatable="false">每日推送一个漂亮妹子和经典视频,看不看随小主!(长按保存图片)</string>
    <string name="meiziaction" translatable="false">我懂</string>

    <string name="save_meizi" translatable="false">小主好眼力,快收了她</string>

    <string name="about_text" translatable="false">感谢对项目的支持和关注,项目会不断的升级更新,如果小主感兴趣欢迎一起来贡献,有好的想法也可以随时发email给我.</string>
    <string name="email" translatable="false">maat.xing@gmail.com</string>
    <string name="begin">开始</string>
    <string name="end">结束</string>



</resources>
