<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/g_meizi">
        <item
            android:id="@+id/meizi"
            android:icon="@drawable/look2"
            android:title="@string/meizi"
            />
    </group>



    <item
        android:id="@+id/setting"
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_night"
                android:icon="@drawable/night"
                android:title="@string/night"
                app:actionLayout="@layout/action_view_switch"/>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_color_lens_white_24dp"
                android:title="@string/theme"
                app:actionLayout="@layout/action_view_switch"/>
        </menu>
    </item>


</menu>